--- a/genshin-rmm/index.html
+++ b/genshin-rmm/index.html
@@ -143,6 +143,9 @@ function init ([i18n, musicTable, scoreList]){
   ]).then(init);
 })();
 
+// https://act.hoyoverse.com/ys/event/ugc-music-stable/index.html?game_biz=hk4e_global&hyl_presentation_style=fullscreen&hyl_auth_required=true&utm_source=sns&utm_medium=twitter&lang=ja-jp&key=Button_Fengdan&is_from_button=true#/
+// これから色々情報を持ってこれるみたい
+
 /* musictable.json def.
   00: English Title
   01: Japanese Title
