--- a/genshin-rmm/detail.html
+++ b/genshin-rmm/detail.html
@@ -237,6 +237,11 @@ const langText = query[0] || "ja";
 document.body.classList.add("lang-" + langText);
 const langId = ((["en", "ja", "cn", "fr", "de"].indexOf(langText) + 1) || 2) - 1;
 document.getElementById("headtitle").href = "./?" + langText;
+/** Create Canonical URL */
+const canonicalLink = document.createElement("link");
+canonicalLink.rel = "canonical";
+canonicalLink.href = "https://md-ndv356.github.io/genshin-rmm/detail.html?" + langText + "." + query[1] + "." + query[2];
+document.head.appendChild(canonicalLink);
 
 const langselect = document.getElementById("langselect");
 langselect.value = langText;
