--- a/genshin-rmm/detail/index.html
+++ b/genshin-rmm/detail/index.html
@@ -396,7 +396,7 @@ function play (){
 (async () => {
   Promise.all([
     fetch("../i18n-v2.json").then(res => res.json()),
-    fetch("../music/" + query[1].slice(1) + "." + query[2] + ".json").then(res => res.json())
+    fetch("../music/" + query[1] + "." + query[2] + ".json").then(res => res.json())
   ]).then(init).catch(error => {
     document.getElementById("title").textContent = "Loading Error";
     console.error(error);
