--- a/genshin-rmm/detail/index.html
+++ b/genshin-rmm/detail/index.html
@@ -205,9 +205,19 @@
   <div><select id="langselect">
     <option value="ja_jp">日本語</option>
     <option value="en_us">English</option>
-    <option value="zh_cn">中文（简体）</option><!-- 繁體 -->
-    <option value="de_de">Deutsch</option>
+    <option value="zh_cn">中文（简体）</option>
+    <option value="zh_tw">中文（繁體）</option>
+    <option value="ko_kr">한국어</option>
+    <option value="es_es">Español</option>
     <option value="fr_fr">Français</option>
+    <option value="ru_ru">Русский язык</option>
+    <option value="th_th">ภาษาไทย</option>
+    <option value="vi_vn">Tiếng Việt</option>
+    <option value="de_de">Deutsch</option>
+    <option value="id_id">Bahasa Indonesia</option>
+    <option value="pt_pt">Português</option>
+    <option value="tr_tr">Türkçe</option>
+    <option value="it_it">Italiano</option>
   </select></div>
 </header>
 <main>
