--- a/genshin-rmm/index.html
+++ b/genshin-rmm/index.html
@@ -54,7 +54,7 @@
     main a[href] {
       color: #2c13b7;
     }
-    .history {
+    .history, .description {
       padding: 8px 0;
       max-width: 700px;
     }
@@ -84,6 +84,10 @@
 <h1 i18n="pagetitle">原神 幾千のメロディー 譜面保管所</h1>
 <main>
   <div id="musiclist"></div>
+  <div class="description">
+    <h2 i18n="description-title"></h2>
+    <div i18n="description-content"></div>
+  </div>
   <div class="history">
     <h2 i18n="history-latest">更新履歴</h2>
     <div id="history-latest"></div>
