--- a/private/50yuki.html
+++ b/private/50yuki.html
@@ -11,7 +11,7 @@
   <div id="map" style="width: 100dvw; height: 100dvh;"></div>
   <div style="position: fixed; top: 0; left: 0; pointer-events: none;">
     <div style="color: #ddd; font-size: 18px; background-color: #111; padding: 4px 12px 0px;">「50年に一度の積雪深」比<span style="font-size: 15px;">（％）</span></div>
-    <div style="color: #ddd; font-size: 14px; background-color: #111; padding: 4px 12px 4px; border-bottom-right-radius: 10px;" id="loading-time">2025/2/6 15:00</div>
+    <div style="color: #ddd; font-size: 14px; background-color: #111; padding: 4px 12px 4px; border-bottom-right-radius: 10px;" id="loading-time">Loading...</div>
   </div>
   <div style="color: #fff; font-size: 14px; pointer-events: none;">
     <div style="position: fixed; bottom: 50px; right: 10px; width: 30px; height: 160px; border: solid 2px #fff9; background: linear-gradient(0deg, hsl(180 100% 62.5%), hsl(135 100% 62.5%), hsl(90 100% 62.5%), hsl(45 100% 62.5%), hsl(0 100% 62.5%), hsl(315 100% 62.5%), hsl(270 100% 62.5%));"></div>
@@ -21,7 +21,7 @@
     <div style="position: fixed; bottom: 202px; right: 50px;">150 %</div>
     <div style="position: fixed; bottom: 230px; right: 16px; width: 20px; height: 20px; background-color: hsl(180 100% 62.5%); opacity: 0.9; border-radius: 10px;" title="10px"></div>
     <div style="position: fixed; bottom: 261px; right: 12px; width: 28px; height: 28px; background-color: hsl(  0 100% 62.5%); opacity: 0.9; border-radius: 14px;" title="14px"></div>
-    <div style="position: fixed; bottom: 295px; right: 11px; width: 30px; height: 30px; background-color: hsl( 63 100% 62.5%); opacity: 0.9; border-radius: 14px;" title="15px"></div>
+    <div style="position: fixed; bottom: 295px; right: 11px; width: 30px; height: 30px; background-color: hsl( 63 100% 62.5%); opacity: 0.9; border-radius: 15px;" title="15px"></div>
     <div style="position: fixed; bottom: 228px; right: 43px;">通常</div>
     <div style="position: fixed; bottom: 263px; right: 47px;">100% ≦</div>
     <div style="position: fixed; bottom: 298px; right: 47px;">+2cm / 2h</div>
