--- a/private/50yuki.html
+++ b/private/50yuki.html
@@ -28,13 +28,15 @@
   </div>
   <style>
     .maplibregl-popup-tip {
-      border-top-color: #2f373c !important;
+      border-top-color: #2f373cdd !important;
     }
     .maplibregl-popup-content {
       pointer-events: none;
-      background: #2f373c;
+      background: #2f373cdd;
       color: #eee;
       border-radius: 6px;
+      backdrop-filter: blur(5px);
+      -webkit-backdrop-filter: blur(5px);
     }
   </style>
 </body>
@@ -122,6 +124,7 @@ const dateTimeFormatter = new Intl.DateTimeFormat('ja-JP', {
 const main = async () => {
   const latestTime = new Date(await fetch("https://www.jma.go.jp/bosai/amedas/data/latest_time.txt?" + Date.now()).then(res => res.text()));
   latestTime.setMinutes(0);
+  latestTime.setHours(latestTime.getHours() - 0);
   if (latestTime-0 === lastTime) return;
   lastTime = latestTime-0;
   document.getElementById("loading-time").textContent = dateTimeFormatter.format(latestTime);
