--- a/private/50yuki.html
+++ b/private/50yuki.html
@@ -33,6 +33,7 @@
   </div>
   <style>
     .maplibregl-popup-tip {
+      border-bottom-color: #2f373cdd !important;
       border-top-color: #2f373cdd !important;
     }
     .maplibregl-popup-content {
